# production-rag

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  exceptions.py  main.py
app/api/: schemas.py
app/api/routes/: ingest.py  query.py
app/generation/: chain.py  citations.py  prompts.py
app/ingestion/: chunker.py  embedder.py  loader.py  pipeline.py
app/memory/: manager.py  postgres_store.py  redis_history.py
app/observability/: langfuse_client.py  metrics.py
app/retrieval/: bm25_store.py  hybrid.py  pipeline.py  reranker.py  vector_store.py
tests/eval/: eval_dataset.json  run_ragas_eval.py
tests/integration/: test_rag_pipeline.py
tests/unit/: test_chunker.py  test_citations.py  test_generation_chain.py  test_hybrid_retrieval.py  test_ingestion_pipeline.py  test_loader.py  test_memory.py  test_reranker.py
